WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315272
Hit-test of clip-path with nested objectBoundingBox <clipPath> uses wrong reference box
https://bugs.webkit.org/show_bug.cgi?id=315272
Summary
Hit-test of clip-path with nested objectBoundingBox <clipPath> uses wrong ref...
Ahmad Saleem
Reported
2026-05-21 02:34:18 PDT
ssia - fixing WPT - css/css-masking/hit-test/clip-path-element-objectboundingbox-002.html and matching other browsers.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-21 02:34:26 PDT
<
rdar://problem/177605894
>
Ahmad Saleem
Comment 2
2026-05-21 02:36:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65398
EWS
Comment 3
2026-05-25 15:13:44 PDT
Committed
313855@main
(16340664d2de): <
https://commits.webkit.org/313855@main
> Reviewed commits have been landed. Closing PR #65398 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug